# devops-agents

./: .dockerignore  .env.example  .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.prod  Makefile  README.md  SECURITY.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docker-publish.yml  docs.yml  release.yml
adding-an-agent/: index.html
adr/001-rbac/: index.html
adr/002-agent-tool-vs-sub-agents/: index.html
agents/devops-assistant/: README.md  pyproject.toml  run_persistent.py
agents/devops-assistant/devops_assistant/: .env.example  agent.py  docker_tools.py  remediation.py
agents/devops-assistant/tests/: test_devops_remediation.py  test_docker_tools.py
agents/docker-agent/: README.md  pyproject.toml
agents/elasticsearch/: pyproject.toml
agents/google-chat-bot/: README.md  pyproject.toml
agents/k8s-health/: pyproject.toml
agents/kafka-health/: README.md  (+1 more)
configuration/: index.html
core/: README.md  pyproject.toml
docs/: adding-an-agent.md  agent-design-patterns.md  agents-overview.md  configuration.md  deployment.md  devops-assistant.md  gen_ref_pages.py  getting-started.md  guardrails.md  index.md  integrations.md  k8s-health-agent.md  kafka-health-agent.md  memory.md  metrics.md  rbac-testing.md  slack-setup.md  troubleshooting.md
enhancements/: index.html
infra/: prometheus.yml
kafka-health-agent/: .gitignore  README.md  docker-compose.yml  pyproject.toml
metrics/: index.html
site/: index.html  sitemap.xml
slack-setup/: index.html
(+197 files in other folders)
