[project]
name = "ai-agents"
version = "0.1.0"
description = "A collection of autonomous AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "ai-agents-core",
    "kafka-health-agent",
    "k8s-health-agent",
    "devops-assistant",
    "ops-journal",
]

[tool.uv.sources]
ai-agents-core = { workspace = true }
kafka-health-agent = { workspace = true }
k8s-health-agent = { workspace = true }
devops-assistant = { workspace = true }
ops-journal = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.uv.workspace]
members = ["core", "agents/*"]

[tool.pytest.ini_options]
testpaths = [
    "core/tests",
    "agents/kafka-health/tests",
    "agents/k8s-health/tests",
    "agents/devops-assistant/tests",
    "agents/ops-journal/tests",
]
