[project]
name = "devops-assistant"
version = "0.1.0"
description = "DevOps orchestrator that delegates to specialized sub-agents"
requires-python = ">=3.11"
dependencies = [
    "ai-agents-core",
    "kafka-health-agent",
]

[tool.uv.sources]
ai-agents-core = { workspace = true }
kafka-health-agent = { workspace = true }
